--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../CSS/style.css" />
   </head>
   <body>
     <!-- Start - header -->
@@ -32,7 +32,7 @@
       </nav>
       <nav class="nav-icon">
         <img
-          src="../Images/home_page/user_Icon.png"
+          src="../Images/Home Page/user_Icon.png"
           width="32px"
           height="32px"
           alt="User Icon"
@@ -45,7 +45,7 @@
     <!-- Start- herobanner -->
     <section class="hero-section">
       <img
-        src="../Images/home_page/hero_banner.png"
+        src="../Images/Home Page/hero_banner.png"
         alt="A plate of jollof rice and chicken"
         width="500"
         height="500"
@@ -84,7 +84,7 @@
       <article class="grid-container1">
         <figure class="img-container">
           <img
-            src="../Images/home_page/Hero_Image.png"
+            src="../Images/Home Page/Hero_Image.png"
             alt="A plate of Jollof Rice"
             width="400"
             height="200"
@@ -94,7 +94,7 @@
         </figure>
         <figure class="img-container"">
           <img
-            src="../Images/home_page/soup_image.png"
+            src="../Images/Home Page/soup_image.png"
             alt="A plate of Egusi Soup"
             width="400"
             height="200"
@@ -104,7 +104,7 @@
         </figure>
         <figure class="img-container">
           <img
-            src="../Images/home_page/peppersoup.png"
+            src="../Images/Home Page/peppersoup.png"
             alt="Peppersoup"
             width="400"
             height="200"
@@ -114,7 +114,7 @@
         </figure>
         <figure class="img-container">
           <img
-            src="../Images/home_page/Suya.png"
+            src="../Images/Home Page/Suya.png"
             alt="Suya"
             width="400"
             height="200"
@@ -124,7 +124,7 @@
         </figure>
         <figure class="img-container">
           <img
-            src="../Images/home_page/Snacks.png"
+            src="../Images/Home Page/Snacks.png"
             alt="Samosa and Spring Rolls"
             width="400"
             height="200"
@@ -142,7 +142,7 @@
       <article class="grid-container1">
         <figure class="img-container">
           <img
-            src="../Images/home_page/Ofada_Rice.png"
+            src="../Images/Home Page/Ofada_Rice.png"
             alt="Ofada Rice"
             width="400"
             height="200"
@@ -153,7 +153,7 @@
         </figure>
         <figure class="img-container"">
           <img
-            src="../Images/home_page/Moimoi.png"
+            src="../Images/Home Page/Moimoi.png"
             alt="moimoi"
             width="400"
             height="200"
@@ -163,7 +163,7 @@
         </figure>
         <figure class="img-container"">
           <img
-            src="../Images/home_page/Plantain.png"
+            src="../Images/Home Page/Plantain.png"
             alt="moimoi"
             width="400"
             height="200"
@@ -174,7 +174,7 @@
        
         <figure class="img-container">
           <img
-            src="../Images/home_page/Yam.png"
+            src="../Images/Home Page/Yam.png"
             alt="Yam"
             width="400"
             height="200"
@@ -184,7 +184,7 @@
         </figure>
         <figure class="img-container">
           <img
-            src="../Images/home_page/Nkwobi.png"
+            src="../Images/Home Page/Nkwobi.png"
             alt="Nkowobi"
             width="400"
             height="200"
@@ -200,6 +200,6 @@
       <p class="copyright">&copy;2024 RI'S KITCHEN</p>
     </footer>
     <!-- End Footer -->
-    <script src="../javascript/script.js"></script>
+    <script src="../Javascript/script.js"></script>
   </body>
 </html>
