--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </nav>
       <nav class="nav-icon">
         <img
-          src="../Images/Home Page/user_Icon.png"
+          src="../Images/home_page/user_Icon.png"
           width="32px"
           height="32px"
           alt="User Icon"
@@ -45,7 +45,7 @@
     <!-- Start- herobanner -->
     <section class="hero-section">
       <img
-        src="../Images/Home Page/hero_banner.png"
+        src="../Images/home_page/hero_banner.png"
         alt="A plate of jollof rice and chicken"
         width="500"
         height="500"
@@ -84,7 +84,7 @@
       <article class="grid-container1">
         <figure class="img-container">
           <img
-            src="../Images/Home Page/Hero_Image.png"
+            src="../Images/home_page/Hero_Image.png"
             alt="A plate of Jollof Rice"
             width="400"
             height="200"
@@ -94,7 +94,7 @@
         </figure>
         <figure class="img-container"">
           <img
-            src="../Images/Home Page/soup_image.png"
+            src="../Images/home_page/soup_image.png"
             alt="A plate of Egusi Soup"
             width="400"
             height="200"
@@ -104,7 +104,7 @@
         </figure>
         <figure class="img-container">
           <img
-            src="../Images/Home Page/peppersoup.png"
+            src="../Images/home_page/peppersoup.png"
             alt="Peppersoup"
             width="400"
             height="200"
@@ -114,7 +114,7 @@
         </figure>
         <figure class="img-container">
           <img
-            src="../Images/Home Page/Suya.png"
+            src="../Images/home_page/Suya.png"
             alt="Suya"
             width="400"
             height="200"
@@ -124,7 +124,7 @@
         </figure>
         <figure class="img-container">
           <img
-            src="../Images/Home Page/Snacks.png"
+            src="../Images/home_page/Snacks.png"
             alt="Samosa and Spring Rolls"
             width="400"
             height="200"
@@ -142,7 +142,7 @@
       <article class="grid-container1">
         <figure class="img-container">
           <img
-            src="../Images/Home Page/Ofada_Rice.png"
+            src="../Images/home_page/Ofada_Rice.png"
             alt="Ofada Rice"
             width="400"
             height="200"
@@ -153,7 +153,7 @@
         </figure>
         <figure class="img-container"">
           <img
-            src="../Images/Home Page/Moimoi.png"
+            src="../Images/home_page/Moimoi.png"
             alt="moimoi"
             width="400"
             height="200"
@@ -163,7 +163,7 @@
         </figure>
         <figure class="img-container"">
           <img
-            src="../Images/Home Page/Plantain.png"
+            src="../Images/home_page/Plantain.png"
             alt="moimoi"
             width="400"
             height="200"
@@ -174,7 +174,7 @@
        
         <figure class="img-container">
           <img
-            src="../Images/Home Page/Yam.png"
+            src="../Images/home_page/Yam.png"
             alt="Yam"
             width="400"
             height="200"
@@ -184,7 +184,7 @@
         </figure>
         <figure class="img-container">
           <img
-            src="../Images/Home Page/Nkwobi.png"
+            src="../Images/home_page/Nkwobi.png"
             alt="Nkowobi"
             width="400"
             height="200"
