--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../CSS/style.css" />
+    <link rel="stylesheet" href="CSS/style.css" />
   </head>
   <body>
     <!-- Start - header -->
@@ -200,6 +200,6 @@
       <p class="copyright">&copy;2024 RI'S KITCHEN</p>
     </footer>
     <!-- End Footer -->
-    <script src="../Javascript/script.js"></script>
+    <script src="Javascript/script.js"></script>
   </body>
 </html>
