--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ri's Kitchen</title>
@@ -17,189 +17,185 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="CSS/style.css" />
-  </head>
-  <body>
+</head>
+<body>
     <!-- Start - header -->
     <header class="header">
-      <h1 class="company-name">RI'S KITCHEN</h1>
-      <nav class="nav-links">
-        <ul class="links">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Menu</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
-      <nav class="nav-icon">
-        <img
-          src="../Images/home_page/user_Icon.png"
-          width="32px"
-          height="32px"
-          alt="User Icon"
-          class="user-icon"
-        />
-        <span class="signin">Sign In</span>
-      </nav>
+        <h1 class="company-name">RI'S KITCHEN</h1>
+        <nav class="nav-links">
+            <ul class="links">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Menu</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+        <nav class="nav-icon">
+            <img
+                src="Images/home_page/user_Icon.png"
+                width="32px"
+                height="32px"
+                alt="User Icon"
+                class="user-icon"
+            />
+            <span class="signin">Sign In</span>
+        </nav>
     </header>
     <!-- End-header -->
     <!-- Start- herobanner -->
     <section class="hero-section">
-      <img
-        src="../Images/home_page/hero_banner.png"
-        alt="A plate of jollof rice and chicken"
-        width="500"
-        height="500"
-        class="hero-banner"
-      />
+        <img
+            src="Images/home_page/hero_banner.png"
+            alt="A plate of jollof rice and chicken"
+            width="500"
+            height="500"
+            class="hero-banner"
+        />
     </section>
     <!-- End herobanner -->
 
     <!-- Welcome message -->
     <section>
-      <h2 class="welcome-heading">Welcome to RI'S KITCHEN</h2>
-      <p class="welcome-message">
-        Experience the vibrant flavors of Nigerian cuisine in a warm and
-        friendly atmosphere. From sizzling Suya to comforting Egusi Soup, our
-        dishes are crafted with passion and authenticity.
-      </p>
-      <p class="welcome-message">
-        Join us for a family dinner, a special celebration, or simply to indulge
-        in delicious food. Our menu celebrates the rich culinary traditions of
-        Nigeria, bringing you a taste of home.
-      </p>
-      <p class="welcome-message">
-        We look forward to serving you and creating memorable dining moments.
-        Thank you for choosing RI'S KITCHEN. Enjoy your meal and come back soon!
-      </p>
-      <div class="container-btn">
-        <button class="explore-btn">Explore</button>
-      </div>
+        <h2 class="welcome-heading">Welcome to RI'S KITCHEN</h2>
+        <p class="welcome-message">
+            Experience the vibrant flavors of Nigerian cuisine in a warm and
+            friendly atmosphere. From sizzling Suya to comforting Egusi Soup, our
+            dishes are crafted with passion and authenticity.
+        </p>
+        <p class="welcome-message">
+            Join us for a family dinner, a special celebration, or simply to indulge
+            in delicious food. Our menu celebrates the rich culinary traditions of
+            Nigeria, bringing you a taste of home.
+        </p>
+        <p class="welcome-message">
+            We look forward to serving you and creating memorable dining moments.
+            Thank you for choosing RI'S KITCHEN. Enjoy your meal and come back soon!
+        </p>
+        <div class="container-btn">
+            <button class="explore-btn">Explore</button>
+        </div>
     </section>
     <!-- End- Welcome Message -->
 
     <!-- Start of menu section -->
-
     <section class="our-menu">
-      <h2 class="menu-heading">Our Menu</h2>
-      <article class="grid-container1">
-        <figure class="img-container">
-          <img
-            src="../Images/home_page/Hero_Image.png"
-            alt="A plate of Jollof Rice"
-            width="400"
-            height="200"
-            class="menu-img"
-          />
-          <figcaption>Rice</figcaption>
-        </figure>
-        <figure class="img-container"">
-          <img
-            src="../Images/home_page/soup_image.png"
-            alt="A plate of Egusi Soup"
-            width="400"
-            height="200"
-            class="menu-img"
-          />
-          <figcaption>Soup</figcaption>
-        </figure>
-        <figure class="img-container">
-          <img
-            src="../Images/home_page/peppersoup.png"
-            alt="Peppersoup"
-            width="400"
-            height="200"
-            class="menu-img"
-          />
-          <figcaption>Peppersoup</figcaption>
-        </figure>
-        <figure class="img-container">
-          <img
-            src="../Images/home_page/Suya.png"
-            alt="Suya"
-            width="400"
-            height="200"
-            class="menu-img"
-          />
-          <figcaption>Grills</figcaption>
-        </figure>
-        <figure class="img-container">
-          <img
-            src="../Images/home_page/Snacks.png"
-            alt="Samosa and Spring Rolls"
-            width="400"
-            height="200"
-            class="menu-img"
-          />
-          <figcaption>Snacks</figcaption>
-        </figure>
-      </article>
+        <h2 class="menu-heading">Our Menu</h2>
+        <article class="grid-container1">
+            <figure class="img-container">
+                <img
+                    src="Images/home_page/Hero_Image.png"
+                    alt="A plate of Jollof Rice"
+                    width="400"
+                    height="200"
+                    class="menu-img"
+                />
+                <figcaption>Rice</figcaption>
+            </figure>
+            <figure class="img-container">
+                <img
+                    src="Images/home_page/soup_image.png"
+                    alt="A plate of Egusi Soup"
+                    width="400"
+                    height="200"
+                    class="menu-img"
+                />
+                <figcaption>Soup</figcaption>
+            </figure>
+            <figure class="img-container">
+                <img
+                    src="Images/home_page/peppersoup.png"
+                    alt="Peppersoup"
+                    width="400"
+                    height="200"
+                    class="menu-img"
+                />
+                <figcaption>Peppersoup</figcaption>
+            </figure>
+            <figure class="img-container">
+                <img
+                    src="Images/home_page/Suya.png"
+                    alt="Suya"
+                    width="400"
+                    height="200"
+                    class="menu-img"
+                />
+                <figcaption>Grills</figcaption>
+            </figure>
+            <figure class="img-container">
+                <img
+                    src="Images/home_page/Snacks.png"
+                    alt="Samosa and Spring Rolls"
+                    width="400"
+                    height="200"
+                    class="menu-img"
+                />
+                <figcaption>Snacks</figcaption>
+            </figure>
+        </article>
     </section>
-
     <!-- end of menu section -->
-     <!-- Start of Specials Section -->
+    <!-- Start of Specials Section -->
     <section class="our-specials">
-      <h2 class="specials-heading">Our Specials</h2>
-      <article class="grid-container1">
-        <figure class="img-container">
-          <img
-            src="../Images/home_page/Ofada_Rice.png"
-            alt="Ofada Rice"
-            width="400"
-            height="200"
-            class="menu-img"
-          />
-          <figcaption>Ofada Rice</figcaption>
-        </figure>
-        </figure>
-        <figure class="img-container"">
-          <img
-            src="../Images/home_page/Moimoi.png"
-            alt="moimoi"
-            width="400"
-            height="200"
-            class="menu-img"
-          />
-          <figcaption>Moimoi</figcaption>
-        </figure>
-        <figure class="img-container"">
-          <img
-            src="../Images/home_page/Plantain.png"
-            alt="moimoi"
-            width="400"
-            height="200"
-            class="menu-img"
-          />
-          <figcaption>Plntain</figcaption>
-        </figure>
-       
-        <figure class="img-container">
-          <img
-            src="../Images/home_page/Yam.png"
-            alt="Yam"
-            width="400"
-            height="200"
-            class="menu-img"
-          />
-          <figcaption>Yam and Fish Sauce</figcaption>
-        </figure>
-        <figure class="img-container">
-          <img
-            src="../Images/home_page/Nkwobi.png"
-            alt="Nkowobi"
-            width="400"
-            height="200"
-            class="menu-img"
-          />
-          <figcaption>Nkowobi</figcaption>
-        </figure>
-      </article>
+        <h2 class="specials-heading">Our Specials</h2>
+        <article class="grid-container1">
+            <figure class="img-container">
+                <img
+                    src="Images/home_page/Ofada_Rice.png"
+                    alt="Ofada Rice"
+                    width="400"
+                    height="200"
+                    class="menu-img"
+                />
+                <figcaption>Ofada Rice</figcaption>
+            </figure>
+            <figure class="img-container">
+                <img
+                    src="Images/home_page/Moimoi.png"
+                    alt="moimoi"
+                    width="400"
+                    height="200"
+                    class="menu-img"
+                />
+                <figcaption>Moimoi</figcaption>
+            </figure>
+            <figure class="img-container">
+                <img
+                    src="Images/home_page/Plantain.png"
+                    alt="moimoi"
+                    width="400"
+                    height="200"
+                    class="menu-img"
+                />
+                <figcaption>Plantain</figcaption>
+            </figure>
+            <figure class="img-container">
+                <img
+                    src="Images/home_page/Yam.png"
+                    alt="Yam"
+                    width="400"
+                    height="200"
+                    class="menu-img"
+                />
+                <figcaption>Yam and Fish Sauce</figcaption>
+            </figure>
+            <figure class="img-container">
+                <img
+                    src="Images/home_page/Nkwobi.png"
+                    alt="Nkowobi"
+                    width="400"
+                    height="200"
+                    class="menu-img"
+                />
+                <figcaption>Nkowobi</figcaption>
+            </figure>
+        </article>
     </section>
     <!-- End Special Section -->
-     <!-- Start Footer -->
+    <!-- Start Footer -->
     <footer>
-      <p class="copyright">&copy;2024 RI'S KITCHEN</p>
+        <p class="copyright">&copy;2024 RI'S KITCHEN</p>
     </footer>
     <!-- End Footer -->
     <script src="Javascript/script.js"></script>
-  </body>
+</body>
 </html>
